Archive2/e2/056496e4aeb449/output
main.cpp: In function 'int main()':
main.cpp:6:29: warning: ISO C++ forbids variable length array [-Wvla]
     int** arr = new int[n][m];
                             ^
main.cpp:6:29: error: array size in new-expression must be constant
main.cpp:6:29: error: the value of 'm' is not usable in a constant expression
main.cpp:5:17: note: 'std::size_t m' is not const
     std::size_t m = 10;
                 ^
main.cpp:6:11: warning: unused variable 'arr' [-Wunused-variable]
     int** arr = new int[n][m];
           ^
