Archive2/e2/056496e4aeb449/main.cpp
#include <iostream>

auto main() -> int {
    std::size_t n = 10;
    std::size_t m = 10;
    int** arr = new int[n][m];
}